# wbkc-calibration-mc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  demo_output.html  demo_spectrum.py  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py
..github/workflows/: ci.yml
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: USAGE.md  literature-notes.md
docs/calibration/: calib_params.json
docs/examples/: phantoms_synth.csv  pregnancy_synth.csv  spectrum_synth.csv
examples/: quickstart.ipynb
notebooks/: demo.ipynb
scripts/: __init__.py  fit_phantoms.py  gen_data.py  run_app.ps1  run_tests.ps1
src/scripts/: __init__.py  gen_data.py
src/wbkc/: __init__.py  calib_fit.py  calibration.py  calibration.py.bak  model.py  model.py.bak  signal.py  signal.py.bak
tests/: conftest.py  test_geometry.py  test_model.py  test_phantom_fit.py  test_regression.py  test_roi_bg.py  test_smoke.py  test_synth_data.py  test_uncertainty.py
