[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wbkc-calibration-mc"
version = "0.1.2"
authors = [{ name = "Kishor Bhat", email = "kishorbhat@example.com" }]
description = "Monte Carlo based WBKC calibration models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pandas"]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
