[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wbkc-calibration-mc"
version = "0.1.3"
authors = [{ name = "Kishor Bhat", email = "kishorbhat@example.com" }]
description = "Monte Carlo based WBKC calibration models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pandas"]
license = { file = "LICENSE" }

[project.scripts]
wbkc-calibrate = "wbkc:run_calibration"

[tool.setuptools.packages.find]
where = ["src"]

# --- tool config ---
[tool.black]
line-length = 88
target-version = ["py311"]


[tool.ruff.format]
quote-style = "double"

[tool.ruff]
line-length = 88
extend-exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
